# af-sklearn-monkeypatch

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
af-sklearn-monkeypatch/: monkeypatcher.py
afsklearn/: __init__.py  _class_weight.py  _classifier_mixin.py  _encode.py  _extmath.py  _mask.py  _multiclass.py  _nn_utils.py  _sparsefuncs.py  _stochastic_optimizers.py  _type_utils.py  _validation.py  base.py  monkeypatcher.py  patched_modules.yml  random_projection.py
afsklearn/feature_selection/: base.py  variance_threshold.py
afsklearn/impute/: base.py  iterative.py  simple.py  simple_imputer.py
afsklearn/linear_model/: base.py  bayes.py  sgd_base.py  sgd_classifier.py
afsklearn/neural_network/: __init__.py  _nn_utils.py  base.py  mlp_classifier.py
afsklearn/patcher/: __init__.py  __init__.py.bak
afsklearn/preprocessing/: __init__.py  _data.py  _encoders.py  _label.py
afsklearn/utils/: __init__.py  af_validation.py  validation.py
test/: quantile_ttest.py  svc_test.py  test_mlp.py
tests/: TODO.md  __init__.py  test_gaussian_random.py  test_gaussian_random_1.py  test_iterative_imputer.py  test_mlp.py  test_mlp_1.py  test_one_hot_encoder.py  test_quantile.py  test_quantile_1.py  test_robust_scaler.py  test_sgd_classifier.py  test_simple_imputer.py  test_svc.py  test_variance_threshold.py  timing_utils.py
