[metadata]
name = afsklearn
version = 0.0.1
maintainer = ArrayFire
maintainer_email = 'support@arrayfire.com'
url='https://github.com/arrayfire/af-sklearn-monkeypatch'
long_description = file: README.md

[options]
package = find:
python_requires = >=3.6.0
install_requires =
    arrayfire>=3.8rc1
    daal4py==2021.3.0
    numpy==1.20.2
    scipy==1.6.2
    scikit-learn==0.24.1

[options.packages.find]
exclude = tests
