[metadata]
name = afsklearn
version = 0.0.1
maintainer = ArrayFire
maintainer_email = 'support@arrayfire.com'
url='https://github.com/arrayfire/af-sklearn-monkeypatch'
long_description = file: README.md

[options]
package = find:
python_requires = >=3.6.0
install_requires =
    arrayfire>=3.8rc1
    daal4py==2021.3.0
    numpy==1.20.2
    pyyaml>=5.4.1
    scipy==1.6.2
    scikit-learn==0.24.1

[options.packages.find]
exclude = tests

[options.extras_require]
dev =
    autopep8==1.5.7
    isort==5.9.2
    flake8==3.9.2
    flake8-import-order==0.18.1

[tool:isort]
line_length = 119
multi_line_output = 4

[flake8]
import-order-style = pep8
max-line-length = 119
