[metadata]
name = afsklearn
version = 0.0.1
maintainer = ArrayFire
maintainer_email = "support@arrayfire.com"
url = "https://github.com/arrayfire/af-sklearn-monkeypatch"
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.6.0
install_requires =
    arrayfire>=3.8rc1
    daal4py==2021.3.0
    numpy==1.20.2
    pyyaml>=5.4.1
    scipy==1.6.2
    scikit-learn==0.24.1

[options.packages.find]
exclude = tests

[options.package_data]
afsklearn =
    patched_modules.yml

[options.extras_require]
dev =
    autopep8==1.5.7
    isort==5.9.2
    flake8==3.9.2
    flake8-import-order==0.18.1
    pytest==6.2.4

[tool:isort]
line_length = 119
multi_line_output = 4
no_lines_before = LOCALFOLDER

[flake8]
application-import-names = afsklearn
import-order-style = pep8
max-line-length = 119
